--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,6 +46,7 @@
             android:text="Lupa Password"
             android:textAlignment="textEnd"
             android:layout_marginTop="8dp"
+            android:id="@+id/forgot_password"
          />
 
         <Button
