--- a/app/src/main/res/layout/activity_detail_produk.xml
+++ b/app/src/main/res/layout/activity_detail_produk.xml
@@ -7,34 +7,177 @@
     android:orientation="vertical"
     tools:context=".DetailProdukActivity">
 
-    <ImageView
-        android:layout_width="170dp"
-        android:layout_height="170dp"
-        android:src="@drawable/baju_1"
-        android:layout_gravity="center"
-        android:id="@+id/img_detail"
-        />
+    <include
+        layout="@layout/tollbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-    <TextView
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ScrollView
+            android:id="@+id/scroll_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/img_detail"
+                    android:layout_width="170dp"
+                    android:layout_height="170dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/baju_1" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="15dp">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/tv_nama_produk"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="15dp"
+                            android:text="Nama Produk"
+
+                            android:textColor="@color/black"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginTop="15dp"
+                            android:src="@drawable/ic_dashboard_black_24dp"
+
+                            />
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/tv_harga_produk"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="Rp. 100.000,-"
+                        android:textColor="@color/black"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal"
+
+                        >
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="ID-BARANG" />
+
+                            <TextView
+                                android:id="@+id/id_barang"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+
+                                android:text="786876" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="BERAT"
+
+                                />
+
+                            <TextView
+                                android:id="@+id/berat_barang"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="0.2 KG" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="STOK" />
+
+                            <TextView
+                                android:id="@+id/stok_barang"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="786876" />
+
+                        </LinearLayout>
+
+
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+            </LinearLayout>
+        </ScrollView>
+    </RelativeLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Nama Produk"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:layout_marginTop="15dp"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:id="@+id/tv_nama_produk"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Rp. 100.000,-"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:layout_marginTop="5dp"
-        android:textColor="@color/black"
+        android:background="@color/black"
+        android:orientation="horizontal"
+        android:padding="15dp">
 
-        android:id="@+id/tv_harga_produk"/>
+        <ImageButton
+            android:layout_width="140dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_home_black_24dp" />
+
+        <ImageButton
+            android:layout_width="140dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_home_black_24dp" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Beli Sekarang" />
+    </LinearLayout>
+
 
 </LinearLayout>
